clusters/apps/base/istio-system/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    namespace: istio-system
    istio-injection: disabled
