clusters/apps/base/istio-system/peerauthentication.yaml
# Lock down mutual TLS for the entire mesh
---
apiVersion: 'security.istio.io/v1beta1'
kind: 'PeerAuthentication'
metadata:
  name: 'default'
  namespace: istio-system
spec:
  mtls:
    mode: STRICT
