clusters/apps/base/istio-system/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: main
  namespace: 'istio-system'
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*.crutonjohn.com'
        - 'crutonjohn.com'
        - '*.os.crutonjohn.com'
        - '*.curtisrayjohn.com'
        - 'curtisrayjohn.com'
        - 'crjtechnologies.com'
        - '*.crjtechnologies.com'
        - 'baremetalblog.com'
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - '*.crutonjohn.com'
        - 'crutonjohn.com'
        - '*.os.crutonjohn.com'
        - '*.curtisrayjohn.com'
        - 'curtisrayjohn.com'
        - 'crjtechnologies.com'
        - '*.crjtechnologies.com'
        - 'baremetalblog.com'
      tls:
        credentialName: wildcard-cert
        mode: SIMPLE
        minProtocolVersion: TLSV1_2
        maxProtocolVersion: TLSV1_3
