clusters/apps/base/istio-system/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  hosts:
    - 'jaeger.crutonjohn.com'
  gateways:
    - istio-system/main
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-query.istio-system.svc.cluster.local
