clusters/apps/base/istio-system/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
    external-dns.alpha.kubernetes.io/external: 'true'
spec:
  hosts:
    - 'jaeger.${SECRET_DOMAIN}'
  gateways:
    - istio-system/main
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 16686
            host: jaeger-query.istio-system.svc.cluster.local
